diagrams for 0.4, 0.5 and 0.6 added

--- a/part0/Exercises/Diagrams/0_5_SD.md
+++ b/part0/Exercises/Diagrams/0_5_SD.md
@@ -1,19 +1,13 @@
-## User sending a new note 
+## Using the SPA version of the application
 ```mermaid
 sequenceDiagram
 
     participant browser
     participant server
 
-    
-    Note left of browser: User fills the form
-    Note left of browser: User send the form by prssing a button
-
-    browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note
+    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/spa
     activate server
-    Note right of server: The server gets the info user send in the body of the post request.
-    Note right of server: Server deals with the data. In our case adding the note to the notes list.
-    server-->>browser: Responds with HTTP status code 302, giving the location (new address)
+    server-->>browser: the html file
     deactivate server
 
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.css
@@ -21,7 +15,7 @@ sequenceDiagram
     server-->>browser: the css file
     deactivate server
 
-    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.js
+    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/spa.js
     activate server
     server-->>browser: the JavaScript file
     deactivate server
@@ -34,4 +28,5 @@ sequenceDiagram
     deactivate server
 
     Note right of browser: The browser executes the callback function that renders the notes
+
 ```
