--- a/part0/Exercises/Diagrams/0_4_SD.md
+++ b/part0/Exercises/Diagrams/0_4_SD.md
@@ -16,6 +16,11 @@ sequenceDiagram
     server-->>browser: Responds with HTTP status code 302, giving the location (new address)
     deactivate server
 
+    browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/notes
+    activate server
+    server-->>browser: the html file
+    deactivate server
+
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.css
     activate server
     server-->>browser: the css file
